[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/player/crosshair.png" type="Texture" id=1]
[ext_resource path="res://scenes/settings/settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/player_ui/player_ui.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://resources/fonts/default_font_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/images/player/helath_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/HighlandGothicFLF.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/images/player/BloodOverlay.png" type="Texture" id=8]
[ext_resource path="res://assets/images/player/hitmarker.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/player/hitmarker/hitmarker.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/images/player/bullet.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hitmarker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_hitmarker"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("hitmarker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="player_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="blood_indicator" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 1 )
expand = true

[node name="hitmarker" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.580392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = -32.5
margin_right = 32.5
margin_bottom = 32.5
rect_min_size = Vector2( 65, 65 )
texture = ExtResource( 9 )
expand = true

[node name="settings_popup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -356.0
margin_top = -160.0
margin_right = 356.0
margin_bottom = 160.0

[node name="settings" parent="settings_popup" instance=ExtResource( 2 )]

[node name="fps_label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 34.0
grow_horizontal = 0
text = "0"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="vel_info" type="Label" parent="HBoxContainer"]
margin_top = 9.0
margin_right = 81.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "Velocity : "
valign = 1

[node name="velocity_label" type="Label" parent="HBoxContainer"]
margin_left = 85.0
margin_top = 9.0
margin_right = 98.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "0"
valign = 1

[node name="health_indicator" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -80.0
margin_right = 138.0
margin_bottom = -30.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true
}

[node name="hp_icon" type="TextureRect" parent="health_indicator"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="hp_label" type="Label" parent="health_indicator"]
margin_left = 60.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "150"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -104.0
margin_right = -32.0
margin_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_group_": true
}

[node name="ammo_label" type="Label" parent="HBoxContainer2"]
margin_top = 23.0
margin_right = 82.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "30/30"
align = 2
valign = 1

[node name="ammo_icon" type="TextureRect" parent="HBoxContainer2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 72.0
size_flags_horizontal = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="regeneration_tween" type="Tween" parent="."]

[node name="hitmarker_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="being_hits_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
pitch_scale = 0.5

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/show_hitmarker = SubResource( 3 )

[connection signal="tween_step" from="regeneration_tween" to="." method="_on_regeneration_tween_tween_step"]
